hphp/test/slow/parser/foreach-bad7.php.expectf
Fatal error: You cannot use this syntax as the iterator variable in a `foreach` loop. in %s/foreach-bad7.php on line 3